// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transformer should apply transformation to inline template 1`] = `
"import * as tslib_1 from \\"tslib\\";
import { Component } from '@angular/core';
let TestComponent = class TestComponent {
};
TestComponent = tslib_1.__decorate([
    Component({
        selector: 'test',
        template: \`<button (click)=\\"__click$.next('the payload')\\">Click Me</button>\`,
        styleUrls: ['./app.component.css']
    })
], TestComponent);
export { TestComponent };
"
`;

exports[`Transformer should not apply transformation to external template 1`] = `
"import * as tslib_1 from \\"tslib\\";
import { Component } from '@angular/core';
let TestComponent = class TestComponent {
};
TestComponent = tslib_1.__decorate([
    Component({
        selector: 'test',
        templateUrl: './some/path',
        styleUrls: ['./app.component.css']
    })
], TestComponent);
export { TestComponent };
"
`;
